--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "prettier/prettier": ["error", {
     "endOfLine": "auto"
   }]
