--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "set NODE_ENV=dev && ts-node src/infra/http/express/index.ts",
     "start": "set NODE_ENV=production && ts-node src/infra/http/express/index.ts",
     "dev": "set NODE_ENV=dev && nodemon src/infra/http/express/index.ts --ignore tests",
-    "test": "set NODE_ENV=dev && jest --detectOpenHandles --forceExit"
+    "test": "set NODE_ENV=dev && jest --detectOpenHandles --forceExit",
+    "generate:doc": "jsdoc -r src/infra/http -c jsdoc.json -d ./out"
   },
   "keywords": [],
   "author": "",
@@ -22,12 +23,18 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.7",
     "@types/node": "^18.7.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.7.5",
+    "@types/yamljs": "^0.2.31",
     "babel-jest": "^28.1.3",
     "jest": "^28.1.1",
+    "jsdoc": "^3.6.11",
+    "nock": "^13.2.9",
+    "swagger-ui-express": "^4.5.0",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "yamljs": "^0.3.0"
   },
   "dependencies": {
     "axios": "^0.27.2",
