--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "test2": "jest",
     "express": "set NODE_ENV=dev && ts-node src/infra/http/express/index.ts",
-    "start": "set NODE_ENV=production && ts-node src/infra/http/express/index.ts",
+    "start": "node build/src/infra/http/express/index.js",
+    "start2": "set NODE_ENV=production && ts-node src/infra/http/express/index.ts",
     "dev": "set NODE_ENV=dev && nodemon src/infra/http/express/index.ts --ignore tests",
     "test": "set NODE_ENV=dev && jest --detectOpenHandles --forceExit",
-    "generate:doc": "jsdoc -r src/infra/http -c jsdoc.json -d ./out"
+    "generate:doc": "jsdoc -r src/infra/http -c jsdoc.json -d ./out",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
